<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="viewModel"
        type="com.example.weatherApp.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.SettingFragment"
        android:padding="32dp"
        android:layout_gravity="center"
       >

        <LinearLayout
            android:id="@+id/liner_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/lang_card"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="1dp"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"

                app:cardMaxElevation="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/temp_card"
                android:paddingBottom="12dp"

                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/setting_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/language"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:gravity="center_horizontal"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        android:orientation="vertical"


                        >

                        <RadioButton
                            android:id="@+id/btn_english"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:layout_marginEnd="12dp" />

                        <RadioButton
                            android:id="@+id/btn_arabic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic"


                            android:layout_marginEnd="12dp" />
                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/loation_card"
                android:layout_width="0dp"
                android:layout_height="160dp"

                app:cardCornerRadius="24dp"
                app:cardElevation="1dp"


                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/lang_card"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"

                    >

                    <TextView
                        android:id="@+id/setting_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/location"

                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                           android:gravity="center_vertical"
                        android:orientation="vertical"


                        >

                        <RadioButton
                            android:id="@+id/btn_gps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gps"

                            android:layout_marginEnd="12dp" />

                        <RadioButton
                            android:id="@+id/btn_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map"


                            android:layout_marginEnd="12dp" />
                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/liner_one"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/temp_card"
                android:layout_width="0dp"
                android:layout_height="170dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="1dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"

                android:layout_marginEnd="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:paddingBottom="12dp"

                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="12dp"
                app:layout_constraintTop_toBottomOf="@id/lang_card"
                app:layout_constraintStart_toStartOf="parent"


                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/setting_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/temperature"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        android:orientation="vertical"


                        >

                        <RadioButton
                            android:id="@+id/btn_celsius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/celsius"

                            android:layout_marginEnd="12dp" />

                        <RadioButton
                            android:id="@+id/btn_kelvin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kelvin"


                            android:layout_marginEnd="12dp" />

                        <RadioButton
                            android:id="@+id/btn_fahrenheit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fahrenheit"


                            android:layout_marginEnd="12dp" />
                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/wind_card"
                android:layout_width="0dp"
                android:layout_height="170dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="1dp"
                android:layout_weight="1"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="12dp"
                app:layout_constraintTop_toBottomOf="@id/lang_card"
                app:layout_constraintStart_toEndOf="@id/temp_card"
                app:layout_constraintStart_toStartOf="@id/loation_card"


                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"

                    >

                    <TextView
                        android:id="@+id/setting_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/wind_speed"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"

                        >

                        <RadioButton
                            android:id="@+id/btn_meter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meter_second"

                            android:layout_marginEnd="4dp" />

                        <RadioButton
                            android:id="@+id/btn_mile_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mile_hour"


                            android:layout_marginEnd="12dp" />
                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>