<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.weatherApp.dilog.UserDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dilog.UserDilogFragment"
        android:background="@drawable/background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="#FF74B2CF"

            android:layout_margin="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                >
                <ImageView
                    android:id="@+id/setting_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/setting_icon"
                    app:layout_constraintStart_toEndOf="@id/setting_icon"
                    android:text="@string/initial_setting"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/white"
                    android:textSize="16dp"

                    />
                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_via"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/setting_icon"


                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/location_text"
                    app:layout_constraintTop_toTopOf="@id/location_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/location_text"
                    android:orientation="horizontal"


                    >
                    <RadioButton
                        android:id="@+id/btn_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:checked="@={viewModel.isGps}"
                        android:layout_marginEnd="12dp"
                        />
                    <RadioButton
                        android:id="@+id/btn_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:checked="@={viewModel.isMap}"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:layout_marginStart="12dp"
                        />
                </RadioGroup>
                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/location_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/ok"
                    app:cornerRadius="24dp"
                     android:backgroundTint="#052B3E"
                    android:layout_marginTop="12dp"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
